tests/init/neg/t3273.check
-- Error: tests/init/neg/t3273.scala:4:42 ------------------------------------------------------------------------------
4 |  val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error
  |                                  ^^^^^^^^^^^^^^^
  |            Promoting the value to fully-initialized is unsafe.  Calling trace:
  |            [34m[ t3273.scala:4 ][0m ->   val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error
  |
  |            The unsafe promotion may cause the following problem(s):
  |
  |            1. Access non-initialized value num1. Calling trace:
  |            [34m[ t3273.scala:4 ][0m ->   val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error
-- Error: tests/init/neg/t3273.scala:5:61 ------------------------------------------------------------------------------
5 |  val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |            Promoting the value to fully-initialized is unsafe.  Calling trace:
  |            [34m[ t3273.scala:5 ][0m ->   val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error
  |
  |            The unsafe promotion may cause the following problem(s):
  |
  |            1. Access non-initialized value num2. Calling trace:
  |            [34m[ t3273.scala:5 ][0m ->   val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error
